# intcoin

./: .gitignore  .gitlab-ci.yml  BETA_ROADMAP.md  BUILD-INFRASTRUCTURE.md  BUILD-STATUS.md  BUILD.md  BUILD_STATUS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  COPYING  COPYRIGHT-SCRIPT-README.md  DEVELOPMENT-PLAN.md  DEVELOPMENT-STATUS.md  Doxyfile  ENHANCEMENTS.md  ENHANCEMENTS_STATUS.md  ENHANCEMENT_PLAN_v1.1.0.md  ENHANCEMENT_PLAN_v1.2.0.md  ENHANCEMENT_PLAN_v1.3.0.md  ENHANCEMENT_PLAN_v1.4.0.md  FINAL_STATUS.md  GENESIS_BLOCK.md  IMPLEMENTATION-GUIDE.md  IMPLEMENTATION-SUMMARY.md  KNOWN_ISSUES.md  LICENSE  LIGHTNING-IMPLEMENTATION-SUMMARY.md  LIGHTNING-STATUS.md  PHASE1_2_STATUS.md  PHASE3_STATUS.md  PHASE4_STATUS.md  PHASE5_STATUS.md  PHASE5_TESTING_PLAN.md  PROGRESS_SUMMARY.md  PROJECT-COMPLETION-SUMMARY.md  PROJECT-STATUS.md  (+33 more)
.claude/: plan.md
.github/: markdown-link-check-config.json
.gitlab/: release_v1.0.0.md
benchmarks/: benchmark_v1.3.0.sh
branding/: BRAND-GUIDELINES.md  ONE-PAGER.md  PRESS-KIT.md  README.md  color-palette.css
bridge-ui/: README.md  index.html  package.json  vite.config.ts
cmake/: FindRocksDB.cmake  riscv64-linux-gnu.cmake
config/: intcoin-tor.conf  seeds_mainnet.txt  seeds_testnet.txt
docs/: ADDRESS_ENCODING.md  API_REFERENCE.md  ARCHITECTURE.md  ATOMIC_SWAPS.md  BLOCK_EXPLORER.md  BOLT8_ENHANCEMENT_PLAN.md  BOLT_SPECIFICATION.md  BRIDGE-MONITORING.md  BUILD-WINDOWS.md  BUILD.md  BUILDING.md  BUILD_GUIDE.md  BUILD_WINDOWS.md  CI-CD-PIPELINE.md  CI-CD.md  CODE_STYLE.md  COMPATIBILITY.md  CONSENSUS-ENGINE.md  (+93 more)
src/bridge/: CMakeLists.txt  README.md  atomic_swap.cpp  bitcoin_bridge.cpp  bridge.cpp  bridge_manager.cpp  bridge_monitor.cpp  cardano_bridge.cpp  ethereum_bridge.cpp  htlc.cpp  litecoin_bridge.cpp  monitor.cpp  spv_proof.cpp
src/bridge/tests/: CMakeLists.txt
src/consensus/: CMakeLists.txt  consensus.cpp  placeholder.cpp
src/contracts/: CMakeLists.txt  README.md  contract.cpp  database.cpp  opcodes.cpp  sdk.cpp  sdk.h  security_analyzer.cpp  storage.cpp  transaction.cpp  validator.cpp  vm.cpp  vm.h
src/contracts/tests/: CMakeLists.txt
src/core/: CMakeLists.txt  block.cpp  blockchain.cpp  intcoin.cpp  mempool.cpp  merkle.cpp  placeholder.cpp  safe_transaction.cpp  transaction.cpp
src/crypto/: CMakeLists.txt  address.cpp  crypto.cpp  dilithium.cpp  dilithium_stub.cpp  encryption.cpp  hkdf.cpp  kyber.cpp  kyber_stub.cpp  mnemonic.cpp  qrcode.cpp  random.cpp  secure_memory.cpp  sha256.cpp  sha256_impl.cpp  sha3.cpp  sha3_impl.cpp
src/db/: CMakeLists.txt  Makefile  db.cpp  wallet_db.cpp
src/db/db_autogen/: deps  moc_predefs.h
src/lightning/: CMakeLists.txt  README.md  amp.cpp  bolt_invoice.cpp  bolt_invoice.h  bolt_messages.cpp  bolt_messages.h  bolt_onion.cpp  bolt_onion.h  bolt_transactions.h  bolt_transport.cpp  bolt_transport.h  eltoo.cpp  lightning.cpp  lightning_invoice.cpp  lightning_network.cpp  lightning_onion.cpp  lightning_watchtower.cpp  ptlc.cpp  submarine_swap.cpp
src/lightning/tests/: CMakeLists.txt
src/lightning/v2/: channel_rebalancing.cpp  multipath_payments.cpp  network_explorer.cpp  routing.cpp  submarine_swaps.cpp  watchtower.cpp
src/miner/: CMakeLists.txt  gpu_miner.cpp  gpu_miner_cuda.cu  gpu_miner_opencl.cpp  intcoin-miner.cpp  main.cpp  main_gpu.cpp  miner.cpp  miner_config.h  miner_logger.h
src/network/: CMakeLists.txt  network.cpp  p2p.cpp  placeholder.cpp  tor.cpp
src/qt/: CMakeLists.txt  addressbookpage.cpp  hardware_wallet.cpp  intcoin-qt.cpp  intcoin.qrc  lightning_utils.cpp  lightning_utils.h  lightningpage.cpp  lightningwindow.cpp  lightningwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  miningpage.cpp  mnemonicDialog.cpp  overviewpage.cpp  pdf_invoice.cpp  qrcodedialog.cpp  receivecoinspage.cpp  sendcoinspage.cpp  settingspage.cpp  transactionspage.cpp
src/qt/res/: intcoin.qss
src/rpc/: CMakeLists.txt  bridge_rpc.cpp  contracts_rpc.cpp  htlc_rpc.cpp  rpc.cpp  rpc.cpp.bak  rpc.cpp.bak10  rpc.cpp.bak11  rpc.cpp.bak12  rpc.cpp.bak13  rpc.cpp.bak14  rpc.cpp.bak15  rpc.cpp.bak2  rpc.cpp.bak3  rpc.cpp.bak5  rpc.cpp.bak6  rpc.cpp.bak7  rpc.cpp.bak8  rpc.cpp.bak9  rpc_server.cpp  swap_rpc.cpp
src/utils/: CMakeLists.txt  placeholder.cpp
src/wallet/: CMakeLists.txt  main.cpp  wallet.cpp
tests/: CMakeLists.txt  INTEGRATION_TESTING.md  benchmark_contracts.cpp  qt_tests.cpp  stress_test.cpp  test_assumeutxo  test_assumeutxo.cpp  test_atomic_swap.cpp  test_bech32.cpp  test_blockchain.cpp  test_bloom.cpp  test_bridge.cpp  test_channel_rebalancing  test_contracts_integration.cpp  test_contracts_reorg.cpp  test_crypto.cpp  test_dilithium_nist.cpp  test_framework.h  test_fuzz.cpp  test_fuzz_malicious.cpp  test_genesis.cpp  test_hash_nist.cpp  test_ibd_integration  test_integration.cpp  test_kyber_nist.cpp  test_lightning.cpp  test_mempool.cpp  test_mempool_analytics  test_mempool_analytics.cpp  test_mempool_analytics_integration  test_metrics  test_metrics.cpp  test_metrics_server  test_metrics_server.cpp  test_ml.cpp  test_network.cpp  test_parallel_validation.cpp  test_parallel_validation.cpp.bak  test_parallel_validation.old  test_qrcode.cpp  (+10 more)
tests/benchmark/: benchmark.h  performance_benchmark.cpp  performance_benchmark.h
tests/contracts/: ERC20Token.sol  SimpleStorage.sol
tests/functional/: README.md  run_tests.sh  test_basic.py  test_blockchain.py  test_framework.py  test_mining.py  test_rpc.py  test_wallet.py
tests/fuzz/: CMakeLists.txt  fuzz_block.cpp  fuzz_bridge.cpp  fuzz_consensus.cpp  fuzz_contract.cpp  fuzz_lightning.cpp  fuzz_mempool.cpp  fuzz_p2p_message.cpp  fuzz_pqc.cpp  fuzz_rpc.cpp  fuzz_script.cpp  fuzz_transaction.cpp  fuzz_wallet.cpp  run-fuzzing.sh
tests/integration/: test_ibd_integration.cpp  test_mempool_analytics_integration.cpp
tests/lightning/: test_channel_rebalancing.cpp  test_multipath_payments.cpp  test_network_explorer.cpp  test_routing.cpp  test_submarine_swaps.cpp  test_watchtower.cpp
tools/: CMakeLists.txt  README.md  mine_genesis.cpp  seeds.json  update_seeds.py  wallet-tool.cpp
(+259 files in other folders)
